force-app/main/default/objects/Funder__c.object
<CustomObject>
    <fields>
        <fullName>API_DateDeleted__c</fullName>
        <formula>If(NOT(ISBLANK(DateDeleted__c)),

TEXT(YEAR(DATEVALUE(DateDeleted__c )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(DateDeleted__c))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(DateDeleted__c))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(DateDeleted__c),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DateDeleted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_EndDate__c</fullName>
        <formula>If(NOT(ISBLANK( EndDate__c )),

TEXT(YEAR( EndDate__c ))&amp; &quot;-&quot; &amp;

LPAD(TEXT(MONTH(EndDate__c)), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(EndDate__c)), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_EndDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_FundingSource__c</fullName>
        <formula>TRIM(LEFT(TEXT(FundingSource__c),FIND(&quot;:&quot;, TEXT(FundingSource__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_Funder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_GrantID__c</fullName>
        <formula>GrantID__c</formula>
        <label>API_GrantID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_OtherFunder__c</fullName>
        <formula>OtherFunder__c</formula>
        <label>API_OtherFunder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_StartDate__c</fullName>
        <formula>If(NOT(ISBLANK( StartDate__c )),

TEXT(YEAR( StartDate__c ))&amp; &quot;-&quot; &amp;

LPAD(TEXT(MONTH(StartDate__c)), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(StartDate__c)), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_StartDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE( CreatedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( CreatedDate ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateCreated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateDeleted__c</fullName>
        <label>DateDeleted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateUpdated__c</fullName>
        <formula>If(NOT(ISBLANK( LastModifiedDate )),

TEXT(YEAR(DATEVALUE(LastModifiedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(LastModifiedDate),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateUpdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExportID__c</fullName>
        <label>ExportID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingSource__c</fullName>
        <label>Funding Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisFundingSource</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GrantID__c</fullName>
        <label>Grant ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherFunder__c</fullName>
        <label>Other Funder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Program</referenceTo>
        <relationshipLabel>Funders</relationshipLabel>
        <relationshipName>Funders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Funder</label>
    <nameField>
        <label>Funder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>